syntax = "proto3";

package microservices_starter.common.errors;

message JoiError {
  string message = 1;
  string type = 2;
}
